# ejemplo-cpp-clase-completamente-abstracta

./: CMakeLists.txt  Compara.h  IntegerCompara.cpp  IntegerCompara.h  Principal.cpp  README.md  StringCompara.cpp  StringCompara.h  ToString.h
